[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pufcli"
version = "0.1.0"
description = "PUF CLI"
requires-python = ">=3.10"
dependencies = [
  "cmd2",
  "rich",
]

[project.scripts]
pufi = "pufcli.repl.app:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["pufcli*"]